<resources>
    <string name="app_name">Child Sugar</string>

    <string name="error_nfc_device_not_supported">"This device doesn't support NFC!"</string>
    <string name="error_nfc_disabled">"NFC is disabled!"</string>

    <string name="activity_food_picker">Pick up food</string>

    <string name="food_picker_menu1">SAVE</string>

    <string name="settings_menu2">Settings</string>
    <string name="share_menu2">Share</string>
    <string name="email_menu2">Email</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_reminder">Reminder Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Add name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_email">Add email</string>
    <string name="pref_title_add_email2">Add second email</string>
    <string name="pref_title_phone1">Add first phone number</string>
    <string name="pref_title_phone2">Add second phone number</string>

    <string name="pref_title_send_email">Send email after scan</string>
    <string-array name="pref_example_list_titles">
        <item>Every time</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_positive">OK</string>
    <string name="pref_negative">CANCEL</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
