<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="phone1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_phone1" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="phone2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_phone2" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_add_email" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="email2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_add_email2" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="send_email"
        android:negativeButtonText="@string/pref_negative"
        android:positiveButtonText="@string/pref_positive"
        android:title="@string/pref_title_send_email" />

    <Preference
        android:key="reminder"
        android:summary="Set Reminder"
        android:title="Reminder" />

</PreferenceScreen>
